# stable_selection

./: .gitignore  README.md  pyproject.toml
ms/: references.bib  selecting_for_stability.tex
scripts/: reproduce.py  results.json
tabs/: tab_architectures.tex  tab_baseline_comparison.tex  tab_robustness.tex  tab_summary.tex  tab_transfer.tex
